--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -125,10 +125,9 @@ main {
 
     @include md {
         ul {
-            grid-template-columns: repeat(12, 1fr);
-        }
-        li {
-            grid-column: span 2;
+            grid-template-columns: 350px 350px;
+            grid-gap: 30px;
+            justify-content: center;
         }
     }
 }
@@ -144,6 +143,27 @@ main {
         section ul li {
             display: grid;
             grid-template-columns: 20px 200px;
+        }
+    }
+
+    @include md {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+
+        .locations {
+            grid-column: 2 / 6;
+            grid-row: 1 / 4;
+        }
+
+        .newsletter {
+            grid-column: 6 / 12;
+            grid-row: 1 / 2;
+        }
+
+        .socials {
+            grid-column: 6 / 12;
+            grid-row: 2 / 3;
         }
     }
 }
